feat: 完成mood模块
